// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProgressGroup > renders with as correctly 1`] = `
"<section data-orientation="horizontal" data-slot="root" class="gap-2 w-full flex flex-col">
  <!--v-if-->
  <div data-slot="base" class="relative flex overflow-hidden rounded-full bg-accented w-full flex-row h-2">
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="24" aria-label="System" role="progressbar" data-state="loading" data-value="24" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 18.75%;">
      <div data-state="loading" data-value="24" data-max="128" data-slot="indicator" class="size-full bg-inverted"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="8" aria-label="Apps" role="progressbar" data-state="loading" data-value="8" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 6.25%;">
      <div data-state="loading" data-value="8" data-max="128" data-slot="indicator" class="size-full bg-error"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="12" aria-label="Documents" role="progressbar" data-state="loading" data-value="12" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 9.375%;">
      <div data-state="loading" data-value="12" data-max="128" data-slot="indicator" class="size-full bg-warning"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="42" aria-label="Multimedia" role="progressbar" data-state="loading" data-value="42" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 32.8125%;">
      <div data-state="loading" data-value="42" data-max="128" data-slot="indicator" class="size-full bg-success"></div>
    </div>
  </div>
  <ul data-slot="list" class="flex flex-col gap-1 text-sm">
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="itemLeadingIcon" class="shrink-0 text-inverted size-4"></svg><span data-slot="itemLabel" class="truncate">System</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">19% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="itemLeadingIcon" class="shrink-0 text-error size-4"></svg><span data-slot="itemLabel" class="truncate">Apps</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">6% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><span data-slot="itemLeadingDot" class="shrink-0 rounded-full bg-warning size-2"></span><span data-slot="itemLabel" class="truncate">Documents</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">9% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><span data-slot="itemLeadingDot" class="shrink-0 rounded-full bg-success size-2"></span><span data-slot="itemLabel" class="truncate">Multimedia</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">33% </span></li>
  </ul>
</section>"
`;

exports[`ProgressGroup > renders with class correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="gap-2 flex flex-col w-48">
  <!--v-if-->
  <div data-slot="base" class="relative flex overflow-hidden rounded-full bg-accented w-full flex-row h-2">
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="24" aria-label="System" role="progressbar" data-state="loading" data-value="24" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 18.75%;">
      <div data-state="loading" data-value="24" data-max="128" data-slot="indicator" class="size-full bg-inverted"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="8" aria-label="Apps" role="progressbar" data-state="loading" data-value="8" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 6.25%;">
      <div data-state="loading" data-value="8" data-max="128" data-slot="indicator" class="size-full bg-error"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="12" aria-label="Documents" role="progressbar" data-state="loading" data-value="12" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 9.375%;">
      <div data-state="loading" data-value="12" data-max="128" data-slot="indicator" class="size-full bg-warning"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="42" aria-label="Multimedia" role="progressbar" data-state="loading" data-value="42" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 32.8125%;">
      <div data-state="loading" data-value="42" data-max="128" data-slot="indicator" class="size-full bg-success"></div>
    </div>
  </div>
  <ul data-slot="list" class="flex flex-col gap-1 text-sm">
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="itemLeadingIcon" class="shrink-0 text-inverted size-4"></svg><span data-slot="itemLabel" class="truncate">System</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">19% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="itemLeadingIcon" class="shrink-0 text-error size-4"></svg><span data-slot="itemLabel" class="truncate">Apps</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">6% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><span data-slot="itemLeadingDot" class="shrink-0 rounded-full bg-warning size-2"></span><span data-slot="itemLabel" class="truncate">Documents</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">9% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><span data-slot="itemLeadingDot" class="shrink-0 rounded-full bg-success size-2"></span><span data-slot="itemLabel" class="truncate">Multimedia</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">33% </span></li>
  </ul>
</div>"
`;

exports[`ProgressGroup > renders with color correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="gap-2 w-full flex flex-col">
  <!--v-if-->
  <div data-slot="base" class="relative flex overflow-hidden rounded-full bg-accented w-full flex-row h-2">
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="24" aria-label="System" role="progressbar" data-state="loading" data-value="24" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 18.75%;">
      <div data-state="loading" data-value="24" data-max="128" data-slot="indicator" class="size-full bg-inverted"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="8" aria-label="Apps" role="progressbar" data-state="loading" data-value="8" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 6.25%;">
      <div data-state="loading" data-value="8" data-max="128" data-slot="indicator" class="size-full bg-inverted"></div>
    </div>
  </div>
  <ul data-slot="list" class="flex flex-col gap-1 text-sm">
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><span data-slot="itemLeadingDot" class="shrink-0 rounded-full bg-inverted size-2"></span><span data-slot="itemLabel" class="truncate">System</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">19% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><span data-slot="itemLeadingDot" class="shrink-0 rounded-full bg-inverted size-2"></span><span data-slot="itemLabel" class="truncate">Apps</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">6% </span></li>
  </ul>
</div>"
`;

exports[`ProgressGroup > renders with item slot correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="gap-2 w-full flex flex-col">
  <!--v-if-->
  <div data-slot="base" class="relative flex overflow-hidden rounded-full bg-accented w-full flex-row h-2">
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="24" aria-label="System" role="progressbar" data-state="loading" data-value="24" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 18.75%;">
      <div data-state="loading" data-value="24" data-max="128" data-slot="indicator" class="size-full bg-inverted"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="8" aria-label="Apps" role="progressbar" data-state="loading" data-value="8" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 6.25%;">
      <div data-state="loading" data-value="8" data-max="128" data-slot="indicator" class="size-full bg-error"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="12" aria-label="Documents" role="progressbar" data-state="loading" data-value="12" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 9.375%;">
      <div data-state="loading" data-value="12" data-max="128" data-slot="indicator" class="size-full bg-warning"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="42" aria-label="Multimedia" role="progressbar" data-state="loading" data-value="42" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 32.8125%;">
      <div data-state="loading" data-value="42" data-max="128" data-slot="indicator" class="size-full bg-success"></div>
    </div>
  </div>
  <ul data-slot="list" class="flex flex-col gap-1 text-sm">
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0">Item slot</li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0">Item slot</li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0">Item slot</li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0">Item slot</li>
  </ul>
</div>"
`;

exports[`ProgressGroup > renders with item ui correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="gap-2 w-full flex flex-col">
  <!--v-if-->
  <div data-slot="base" class="relative flex overflow-hidden rounded-full bg-accented w-full flex-row h-2">
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="24" aria-label="System" role="progressbar" data-state="loading" data-value="24" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 18.75%;">
      <div data-state="loading" data-value="24" data-max="128" data-slot="indicator" class="size-full bg-primary"></div>
    </div>
  </div>
  <ul data-slot="list" class="flex flex-col gap-1 text-sm">
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><span data-slot="itemLeadingDot" class="shrink-0 rounded-full bg-primary size-2"></span><span data-slot="itemLabel" class="truncate font-bold">System</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">19% </span></li>
  </ul>
</div>"
`;

exports[`ProgressGroup > renders with item-label slot correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="gap-2 w-full flex flex-col">
  <!--v-if-->
  <div data-slot="base" class="relative flex overflow-hidden rounded-full bg-accented w-full flex-row h-2">
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="24" aria-label="System" role="progressbar" data-state="loading" data-value="24" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 18.75%;">
      <div data-state="loading" data-value="24" data-max="128" data-slot="indicator" class="size-full bg-inverted"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="8" aria-label="Apps" role="progressbar" data-state="loading" data-value="8" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 6.25%;">
      <div data-state="loading" data-value="8" data-max="128" data-slot="indicator" class="size-full bg-error"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="12" aria-label="Documents" role="progressbar" data-state="loading" data-value="12" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 9.375%;">
      <div data-state="loading" data-value="12" data-max="128" data-slot="indicator" class="size-full bg-warning"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="42" aria-label="Multimedia" role="progressbar" data-state="loading" data-value="42" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 32.8125%;">
      <div data-state="loading" data-value="42" data-max="128" data-slot="indicator" class="size-full bg-success"></div>
    </div>
  </div>
  <ul data-slot="list" class="flex flex-col gap-1 text-sm">
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="itemLeadingIcon" class="shrink-0 text-inverted size-4"></svg><span data-slot="itemLabel" class="truncate">Label slot</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">19% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="itemLeadingIcon" class="shrink-0 text-error size-4"></svg><span data-slot="itemLabel" class="truncate">Label slot</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">6% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><span data-slot="itemLeadingDot" class="shrink-0 rounded-full bg-warning size-2"></span><span data-slot="itemLabel" class="truncate">Label slot</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">9% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><span data-slot="itemLeadingDot" class="shrink-0 rounded-full bg-success size-2"></span><span data-slot="itemLabel" class="truncate">Label slot</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">33% </span></li>
  </ul>
</div>"
`;

exports[`ProgressGroup > renders with item-leading slot correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="gap-2 w-full flex flex-col">
  <!--v-if-->
  <div data-slot="base" class="relative flex overflow-hidden rounded-full bg-accented w-full flex-row h-2">
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="24" aria-label="System" role="progressbar" data-state="loading" data-value="24" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 18.75%;">
      <div data-state="loading" data-value="24" data-max="128" data-slot="indicator" class="size-full bg-inverted"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="8" aria-label="Apps" role="progressbar" data-state="loading" data-value="8" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 6.25%;">
      <div data-state="loading" data-value="8" data-max="128" data-slot="indicator" class="size-full bg-error"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="12" aria-label="Documents" role="progressbar" data-state="loading" data-value="12" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 9.375%;">
      <div data-state="loading" data-value="12" data-max="128" data-slot="indicator" class="size-full bg-warning"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="42" aria-label="Multimedia" role="progressbar" data-state="loading" data-value="42" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 32.8125%;">
      <div data-state="loading" data-value="42" data-max="128" data-slot="indicator" class="size-full bg-success"></div>
    </div>
  </div>
  <ul data-slot="list" class="flex flex-col gap-1 text-sm">
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0">Leading slot<span data-slot="itemLabel" class="truncate">System</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">19% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0">Leading slot<span data-slot="itemLabel" class="truncate">Apps</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">6% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0">Leading slot<span data-slot="itemLabel" class="truncate">Documents</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">9% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0">Leading slot<span data-slot="itemLabel" class="truncate">Multimedia</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">33% </span></li>
  </ul>
</div>"
`;

exports[`ProgressGroup > renders with item-trailing slot correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="gap-2 w-full flex flex-col">
  <!--v-if-->
  <div data-slot="base" class="relative flex overflow-hidden rounded-full bg-accented w-full flex-row h-2">
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="24" aria-label="System" role="progressbar" data-state="loading" data-value="24" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 18.75%;">
      <div data-state="loading" data-value="24" data-max="128" data-slot="indicator" class="size-full bg-inverted"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="8" aria-label="Apps" role="progressbar" data-state="loading" data-value="8" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 6.25%;">
      <div data-state="loading" data-value="8" data-max="128" data-slot="indicator" class="size-full bg-error"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="12" aria-label="Documents" role="progressbar" data-state="loading" data-value="12" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 9.375%;">
      <div data-state="loading" data-value="12" data-max="128" data-slot="indicator" class="size-full bg-warning"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="42" aria-label="Multimedia" role="progressbar" data-state="loading" data-value="42" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 32.8125%;">
      <div data-state="loading" data-value="42" data-max="128" data-slot="indicator" class="size-full bg-success"></div>
    </div>
  </div>
  <ul data-slot="list" class="flex flex-col gap-1 text-sm">
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="itemLeadingIcon" class="shrink-0 text-inverted size-4"></svg><span data-slot="itemLabel" class="truncate">System</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">Trailing slot</span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="itemLeadingIcon" class="shrink-0 text-error size-4"></svg><span data-slot="itemLabel" class="truncate">Apps</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">Trailing slot</span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><span data-slot="itemLeadingDot" class="shrink-0 rounded-full bg-warning size-2"></span><span data-slot="itemLabel" class="truncate">Documents</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">Trailing slot</span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><span data-slot="itemLeadingDot" class="shrink-0 rounded-full bg-success size-2"></span><span data-slot="itemLabel" class="truncate">Multimedia</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">Trailing slot</span></li>
  </ul>
</div>"
`;

exports[`ProgressGroup > renders with items correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="gap-2 w-full flex flex-col">
  <!--v-if-->
  <div data-slot="base" class="relative flex overflow-hidden rounded-full bg-accented w-full flex-row h-2">
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="24" aria-label="System" role="progressbar" data-state="loading" data-value="24" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 18.75%;">
      <div data-state="loading" data-value="24" data-max="128" data-slot="indicator" class="size-full bg-inverted"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="8" aria-label="Apps" role="progressbar" data-state="loading" data-value="8" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 6.25%;">
      <div data-state="loading" data-value="8" data-max="128" data-slot="indicator" class="size-full bg-error"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="12" aria-label="Documents" role="progressbar" data-state="loading" data-value="12" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 9.375%;">
      <div data-state="loading" data-value="12" data-max="128" data-slot="indicator" class="size-full bg-warning"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="42" aria-label="Multimedia" role="progressbar" data-state="loading" data-value="42" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 32.8125%;">
      <div data-state="loading" data-value="42" data-max="128" data-slot="indicator" class="size-full bg-success"></div>
    </div>
  </div>
  <ul data-slot="list" class="flex flex-col gap-1 text-sm">
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="itemLeadingIcon" class="shrink-0 text-inverted size-4"></svg><span data-slot="itemLabel" class="truncate">System</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">19% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="itemLeadingIcon" class="shrink-0 text-error size-4"></svg><span data-slot="itemLabel" class="truncate">Apps</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">6% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><span data-slot="itemLeadingDot" class="shrink-0 rounded-full bg-warning size-2"></span><span data-slot="itemLabel" class="truncate">Documents</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">9% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><span data-slot="itemLeadingDot" class="shrink-0 rounded-full bg-success size-2"></span><span data-slot="itemLabel" class="truncate">Multimedia</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">33% </span></li>
  </ul>
</div>"
`;

exports[`ProgressGroup > renders with max correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="gap-2 w-full flex flex-col">
  <!--v-if-->
  <div data-slot="base" class="relative flex overflow-hidden rounded-full bg-accented w-full flex-row h-2">
    <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="24" aria-label="System" role="progressbar" data-state="loading" data-value="24" data-max="100" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 24%;">
      <div data-state="loading" data-value="24" data-max="100" data-slot="indicator" class="size-full bg-inverted"></div>
    </div>
    <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="8" aria-label="Apps" role="progressbar" data-state="loading" data-value="8" data-max="100" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 8%;">
      <div data-state="loading" data-value="8" data-max="100" data-slot="indicator" class="size-full bg-error"></div>
    </div>
    <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="12" aria-label="Documents" role="progressbar" data-state="loading" data-value="12" data-max="100" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 12%;">
      <div data-state="loading" data-value="12" data-max="100" data-slot="indicator" class="size-full bg-warning"></div>
    </div>
    <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="42" aria-label="Multimedia" role="progressbar" data-state="loading" data-value="42" data-max="100" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 42%;">
      <div data-state="loading" data-value="42" data-max="100" data-slot="indicator" class="size-full bg-success"></div>
    </div>
  </div>
  <ul data-slot="list" class="flex flex-col gap-1 text-sm">
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="itemLeadingIcon" class="shrink-0 text-inverted size-4"></svg><span data-slot="itemLabel" class="truncate">System</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">24% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="itemLeadingIcon" class="shrink-0 text-error size-4"></svg><span data-slot="itemLabel" class="truncate">Apps</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">8% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><span data-slot="itemLeadingDot" class="shrink-0 rounded-full bg-warning size-2"></span><span data-slot="itemLabel" class="truncate">Documents</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">12% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><span data-slot="itemLeadingDot" class="shrink-0 rounded-full bg-success size-2"></span><span data-slot="itemLabel" class="truncate">Multimedia</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">42% </span></li>
  </ul>
</div>"
`;

exports[`ProgressGroup > renders with orientation horizontal correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="gap-2 w-full flex flex-col">
  <div data-slot="status" class="flex text-dimmed duration-200 ease-out motion-reduce:transition-none text-sm flex-row items-center justify-end min-w-fit transition-[width]" style="width: 67%;">67% </div>
  <div data-slot="base" class="relative flex overflow-hidden rounded-full bg-accented w-full flex-row h-2">
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="24" aria-label="System" role="progressbar" data-state="loading" data-value="24" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 18.75%;">
      <div data-state="loading" data-value="24" data-max="128" data-slot="indicator" class="size-full bg-inverted"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="8" aria-label="Apps" role="progressbar" data-state="loading" data-value="8" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 6.25%;">
      <div data-state="loading" data-value="8" data-max="128" data-slot="indicator" class="size-full bg-error"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="12" aria-label="Documents" role="progressbar" data-state="loading" data-value="12" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 9.375%;">
      <div data-state="loading" data-value="12" data-max="128" data-slot="indicator" class="size-full bg-warning"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="42" aria-label="Multimedia" role="progressbar" data-state="loading" data-value="42" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 32.8125%;">
      <div data-state="loading" data-value="42" data-max="128" data-slot="indicator" class="size-full bg-success"></div>
    </div>
  </div>
  <ul data-slot="list" class="flex flex-col gap-1 text-sm">
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="itemLeadingIcon" class="shrink-0 text-inverted size-4"></svg><span data-slot="itemLabel" class="truncate">System</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">19% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="itemLeadingIcon" class="shrink-0 text-error size-4"></svg><span data-slot="itemLabel" class="truncate">Apps</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">6% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><span data-slot="itemLeadingDot" class="shrink-0 rounded-full bg-warning size-2"></span><span data-slot="itemLabel" class="truncate">Documents</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">9% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><span data-slot="itemLeadingDot" class="shrink-0 rounded-full bg-success size-2"></span><span data-slot="itemLabel" class="truncate">Multimedia</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">33% </span></li>
  </ul>
</div>"
`;

exports[`ProgressGroup > renders with orientation vertical correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="gap-2 h-full flex flex-row">
  <div data-slot="status" class="flex text-dimmed duration-200 ease-out motion-reduce:transition-none text-sm flex-col justify-end min-h-fit transition-[height]" style="height: 67%;">67% </div>
  <div data-slot="base" class="relative flex overflow-hidden rounded-full bg-accented h-full flex-col-reverse w-2">
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="24" aria-label="System" role="progressbar" data-state="loading" data-value="24" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none w-full transition-[height]" style="height: 18.75%;">
      <div data-state="loading" data-value="24" data-max="128" data-slot="indicator" class="size-full bg-inverted"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="8" aria-label="Apps" role="progressbar" data-state="loading" data-value="8" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none w-full transition-[height]" style="height: 6.25%;">
      <div data-state="loading" data-value="8" data-max="128" data-slot="indicator" class="size-full bg-error"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="12" aria-label="Documents" role="progressbar" data-state="loading" data-value="12" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none w-full transition-[height]" style="height: 9.375%;">
      <div data-state="loading" data-value="12" data-max="128" data-slot="indicator" class="size-full bg-warning"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="42" aria-label="Multimedia" role="progressbar" data-state="loading" data-value="42" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none w-full transition-[height]" style="height: 32.8125%;">
      <div data-state="loading" data-value="42" data-max="128" data-slot="indicator" class="size-full bg-success"></div>
    </div>
  </div>
  <ul data-slot="list" class="flex flex-col gap-1 text-sm">
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="itemLeadingIcon" class="shrink-0 text-inverted size-4"></svg><span data-slot="itemLabel" class="truncate">System</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">19% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="itemLeadingIcon" class="shrink-0 text-error size-4"></svg><span data-slot="itemLabel" class="truncate">Apps</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">6% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><span data-slot="itemLeadingDot" class="shrink-0 rounded-full bg-warning size-2"></span><span data-slot="itemLabel" class="truncate">Documents</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">9% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><span data-slot="itemLeadingDot" class="shrink-0 rounded-full bg-success size-2"></span><span data-slot="itemLabel" class="truncate">Multimedia</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">33% </span></li>
  </ul>
</div>"
`;

exports[`ProgressGroup > renders with size 2xl correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="gap-2 w-full flex flex-col">
  <div data-slot="status" class="flex text-dimmed duration-200 ease-out motion-reduce:transition-none text-base flex-row items-center justify-end min-w-fit transition-[width]" style="width: 67%;">67% </div>
  <div data-slot="base" class="relative flex overflow-hidden rounded-full bg-accented w-full flex-row h-5">
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="24" aria-label="System" role="progressbar" data-state="loading" data-value="24" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 18.75%;">
      <div data-state="loading" data-value="24" data-max="128" data-slot="indicator" class="size-full bg-inverted"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="8" aria-label="Apps" role="progressbar" data-state="loading" data-value="8" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 6.25%;">
      <div data-state="loading" data-value="8" data-max="128" data-slot="indicator" class="size-full bg-error"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="12" aria-label="Documents" role="progressbar" data-state="loading" data-value="12" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 9.375%;">
      <div data-state="loading" data-value="12" data-max="128" data-slot="indicator" class="size-full bg-warning"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="42" aria-label="Multimedia" role="progressbar" data-state="loading" data-value="42" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 32.8125%;">
      <div data-state="loading" data-value="42" data-max="128" data-slot="indicator" class="size-full bg-success"></div>
    </div>
  </div>
  <ul data-slot="list" class="flex flex-col gap-1 text-base">
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="itemLeadingIcon" class="shrink-0 text-inverted size-5"></svg><span data-slot="itemLabel" class="truncate">System</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">19% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="itemLeadingIcon" class="shrink-0 text-error size-5"></svg><span data-slot="itemLabel" class="truncate">Apps</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">6% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><span data-slot="itemLeadingDot" class="shrink-0 rounded-full bg-warning size-2.5"></span><span data-slot="itemLabel" class="truncate">Documents</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">9% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><span data-slot="itemLeadingDot" class="shrink-0 rounded-full bg-success size-2.5"></span><span data-slot="itemLabel" class="truncate">Multimedia</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">33% </span></li>
  </ul>
</div>"
`;

exports[`ProgressGroup > renders with size 2xs correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="gap-2 w-full flex flex-col">
  <div data-slot="status" class="flex text-dimmed duration-200 ease-out motion-reduce:transition-none text-xs flex-row items-center justify-end min-w-fit transition-[width]" style="width: 67%;">67% </div>
  <div data-slot="base" class="relative flex overflow-hidden rounded-full bg-accented w-full flex-row h-px">
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="24" aria-label="System" role="progressbar" data-state="loading" data-value="24" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 18.75%;">
      <div data-state="loading" data-value="24" data-max="128" data-slot="indicator" class="size-full bg-inverted"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="8" aria-label="Apps" role="progressbar" data-state="loading" data-value="8" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 6.25%;">
      <div data-state="loading" data-value="8" data-max="128" data-slot="indicator" class="size-full bg-error"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="12" aria-label="Documents" role="progressbar" data-state="loading" data-value="12" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 9.375%;">
      <div data-state="loading" data-value="12" data-max="128" data-slot="indicator" class="size-full bg-warning"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="42" aria-label="Multimedia" role="progressbar" data-state="loading" data-value="42" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 32.8125%;">
      <div data-state="loading" data-value="42" data-max="128" data-slot="indicator" class="size-full bg-success"></div>
    </div>
  </div>
  <ul data-slot="list" class="flex flex-col gap-1 text-xs">
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="itemLeadingIcon" class="shrink-0 text-inverted size-3"></svg><span data-slot="itemLabel" class="truncate">System</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">19% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="itemLeadingIcon" class="shrink-0 text-error size-3"></svg><span data-slot="itemLabel" class="truncate">Apps</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">6% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><span data-slot="itemLeadingDot" class="shrink-0 rounded-full bg-warning size-1.5"></span><span data-slot="itemLabel" class="truncate">Documents</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">9% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><span data-slot="itemLeadingDot" class="shrink-0 rounded-full bg-success size-1.5"></span><span data-slot="itemLabel" class="truncate">Multimedia</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">33% </span></li>
  </ul>
</div>"
`;

exports[`ProgressGroup > renders with size lg correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="gap-2 w-full flex flex-col">
  <div data-slot="status" class="flex text-dimmed duration-200 ease-out motion-reduce:transition-none text-sm flex-row items-center justify-end min-w-fit transition-[width]" style="width: 67%;">67% </div>
  <div data-slot="base" class="relative flex overflow-hidden rounded-full bg-accented w-full flex-row h-3">
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="24" aria-label="System" role="progressbar" data-state="loading" data-value="24" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 18.75%;">
      <div data-state="loading" data-value="24" data-max="128" data-slot="indicator" class="size-full bg-inverted"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="8" aria-label="Apps" role="progressbar" data-state="loading" data-value="8" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 6.25%;">
      <div data-state="loading" data-value="8" data-max="128" data-slot="indicator" class="size-full bg-error"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="12" aria-label="Documents" role="progressbar" data-state="loading" data-value="12" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 9.375%;">
      <div data-state="loading" data-value="12" data-max="128" data-slot="indicator" class="size-full bg-warning"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="42" aria-label="Multimedia" role="progressbar" data-state="loading" data-value="42" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 32.8125%;">
      <div data-state="loading" data-value="42" data-max="128" data-slot="indicator" class="size-full bg-success"></div>
    </div>
  </div>
  <ul data-slot="list" class="flex flex-col gap-1 text-sm">
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="itemLeadingIcon" class="shrink-0 text-inverted size-4"></svg><span data-slot="itemLabel" class="truncate">System</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">19% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="itemLeadingIcon" class="shrink-0 text-error size-4"></svg><span data-slot="itemLabel" class="truncate">Apps</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">6% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><span data-slot="itemLeadingDot" class="shrink-0 rounded-full bg-warning size-2"></span><span data-slot="itemLabel" class="truncate">Documents</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">9% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><span data-slot="itemLeadingDot" class="shrink-0 rounded-full bg-success size-2"></span><span data-slot="itemLabel" class="truncate">Multimedia</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">33% </span></li>
  </ul>
</div>"
`;

exports[`ProgressGroup > renders with size md correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="gap-2 w-full flex flex-col">
  <div data-slot="status" class="flex text-dimmed duration-200 ease-out motion-reduce:transition-none text-sm flex-row items-center justify-end min-w-fit transition-[width]" style="width: 67%;">67% </div>
  <div data-slot="base" class="relative flex overflow-hidden rounded-full bg-accented w-full flex-row h-2">
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="24" aria-label="System" role="progressbar" data-state="loading" data-value="24" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 18.75%;">
      <div data-state="loading" data-value="24" data-max="128" data-slot="indicator" class="size-full bg-inverted"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="8" aria-label="Apps" role="progressbar" data-state="loading" data-value="8" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 6.25%;">
      <div data-state="loading" data-value="8" data-max="128" data-slot="indicator" class="size-full bg-error"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="12" aria-label="Documents" role="progressbar" data-state="loading" data-value="12" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 9.375%;">
      <div data-state="loading" data-value="12" data-max="128" data-slot="indicator" class="size-full bg-warning"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="42" aria-label="Multimedia" role="progressbar" data-state="loading" data-value="42" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 32.8125%;">
      <div data-state="loading" data-value="42" data-max="128" data-slot="indicator" class="size-full bg-success"></div>
    </div>
  </div>
  <ul data-slot="list" class="flex flex-col gap-1 text-sm">
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="itemLeadingIcon" class="shrink-0 text-inverted size-4"></svg><span data-slot="itemLabel" class="truncate">System</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">19% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="itemLeadingIcon" class="shrink-0 text-error size-4"></svg><span data-slot="itemLabel" class="truncate">Apps</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">6% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><span data-slot="itemLeadingDot" class="shrink-0 rounded-full bg-warning size-2"></span><span data-slot="itemLabel" class="truncate">Documents</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">9% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><span data-slot="itemLeadingDot" class="shrink-0 rounded-full bg-success size-2"></span><span data-slot="itemLabel" class="truncate">Multimedia</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">33% </span></li>
  </ul>
</div>"
`;

exports[`ProgressGroup > renders with size sm correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="gap-2 w-full flex flex-col">
  <div data-slot="status" class="flex text-dimmed duration-200 ease-out motion-reduce:transition-none text-sm flex-row items-center justify-end min-w-fit transition-[width]" style="width: 67%;">67% </div>
  <div data-slot="base" class="relative flex overflow-hidden rounded-full bg-accented w-full flex-row h-1">
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="24" aria-label="System" role="progressbar" data-state="loading" data-value="24" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 18.75%;">
      <div data-state="loading" data-value="24" data-max="128" data-slot="indicator" class="size-full bg-inverted"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="8" aria-label="Apps" role="progressbar" data-state="loading" data-value="8" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 6.25%;">
      <div data-state="loading" data-value="8" data-max="128" data-slot="indicator" class="size-full bg-error"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="12" aria-label="Documents" role="progressbar" data-state="loading" data-value="12" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 9.375%;">
      <div data-state="loading" data-value="12" data-max="128" data-slot="indicator" class="size-full bg-warning"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="42" aria-label="Multimedia" role="progressbar" data-state="loading" data-value="42" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 32.8125%;">
      <div data-state="loading" data-value="42" data-max="128" data-slot="indicator" class="size-full bg-success"></div>
    </div>
  </div>
  <ul data-slot="list" class="flex flex-col gap-1 text-sm">
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="itemLeadingIcon" class="shrink-0 text-inverted size-4"></svg><span data-slot="itemLabel" class="truncate">System</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">19% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="itemLeadingIcon" class="shrink-0 text-error size-4"></svg><span data-slot="itemLabel" class="truncate">Apps</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">6% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><span data-slot="itemLeadingDot" class="shrink-0 rounded-full bg-warning size-2"></span><span data-slot="itemLabel" class="truncate">Documents</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">9% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><span data-slot="itemLeadingDot" class="shrink-0 rounded-full bg-success size-2"></span><span data-slot="itemLabel" class="truncate">Multimedia</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">33% </span></li>
  </ul>
</div>"
`;

exports[`ProgressGroup > renders with size xl correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="gap-2 w-full flex flex-col">
  <div data-slot="status" class="flex text-dimmed duration-200 ease-out motion-reduce:transition-none text-base flex-row items-center justify-end min-w-fit transition-[width]" style="width: 67%;">67% </div>
  <div data-slot="base" class="relative flex overflow-hidden rounded-full bg-accented w-full flex-row h-4">
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="24" aria-label="System" role="progressbar" data-state="loading" data-value="24" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 18.75%;">
      <div data-state="loading" data-value="24" data-max="128" data-slot="indicator" class="size-full bg-inverted"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="8" aria-label="Apps" role="progressbar" data-state="loading" data-value="8" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 6.25%;">
      <div data-state="loading" data-value="8" data-max="128" data-slot="indicator" class="size-full bg-error"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="12" aria-label="Documents" role="progressbar" data-state="loading" data-value="12" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 9.375%;">
      <div data-state="loading" data-value="12" data-max="128" data-slot="indicator" class="size-full bg-warning"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="42" aria-label="Multimedia" role="progressbar" data-state="loading" data-value="42" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 32.8125%;">
      <div data-state="loading" data-value="42" data-max="128" data-slot="indicator" class="size-full bg-success"></div>
    </div>
  </div>
  <ul data-slot="list" class="flex flex-col gap-1 text-base">
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="itemLeadingIcon" class="shrink-0 text-inverted size-5"></svg><span data-slot="itemLabel" class="truncate">System</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">19% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="itemLeadingIcon" class="shrink-0 text-error size-5"></svg><span data-slot="itemLabel" class="truncate">Apps</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">6% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><span data-slot="itemLeadingDot" class="shrink-0 rounded-full bg-warning size-2.5"></span><span data-slot="itemLabel" class="truncate">Documents</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">9% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><span data-slot="itemLeadingDot" class="shrink-0 rounded-full bg-success size-2.5"></span><span data-slot="itemLabel" class="truncate">Multimedia</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">33% </span></li>
  </ul>
</div>"
`;

exports[`ProgressGroup > renders with size xs correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="gap-2 w-full flex flex-col">
  <div data-slot="status" class="flex text-dimmed duration-200 ease-out motion-reduce:transition-none text-xs flex-row items-center justify-end min-w-fit transition-[width]" style="width: 67%;">67% </div>
  <div data-slot="base" class="relative flex overflow-hidden rounded-full bg-accented w-full flex-row h-0.5">
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="24" aria-label="System" role="progressbar" data-state="loading" data-value="24" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 18.75%;">
      <div data-state="loading" data-value="24" data-max="128" data-slot="indicator" class="size-full bg-inverted"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="8" aria-label="Apps" role="progressbar" data-state="loading" data-value="8" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 6.25%;">
      <div data-state="loading" data-value="8" data-max="128" data-slot="indicator" class="size-full bg-error"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="12" aria-label="Documents" role="progressbar" data-state="loading" data-value="12" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 9.375%;">
      <div data-state="loading" data-value="12" data-max="128" data-slot="indicator" class="size-full bg-warning"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="42" aria-label="Multimedia" role="progressbar" data-state="loading" data-value="42" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 32.8125%;">
      <div data-state="loading" data-value="42" data-max="128" data-slot="indicator" class="size-full bg-success"></div>
    </div>
  </div>
  <ul data-slot="list" class="flex flex-col gap-1 text-xs">
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="itemLeadingIcon" class="shrink-0 text-inverted size-3"></svg><span data-slot="itemLabel" class="truncate">System</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">19% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="itemLeadingIcon" class="shrink-0 text-error size-3"></svg><span data-slot="itemLabel" class="truncate">Apps</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">6% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><span data-slot="itemLeadingDot" class="shrink-0 rounded-full bg-warning size-1.5"></span><span data-slot="itemLabel" class="truncate">Documents</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">9% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><span data-slot="itemLeadingDot" class="shrink-0 rounded-full bg-success size-1.5"></span><span data-slot="itemLabel" class="truncate">Multimedia</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">33% </span></li>
  </ul>
</div>"
`;

exports[`ProgressGroup > renders with status correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="gap-2 w-full flex flex-col">
  <div data-slot="status" class="flex text-dimmed duration-200 ease-out motion-reduce:transition-none text-sm flex-row items-center justify-end min-w-fit transition-[width]" style="width: 67%;">67% </div>
  <div data-slot="base" class="relative flex overflow-hidden rounded-full bg-accented w-full flex-row h-2">
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="24" aria-label="System" role="progressbar" data-state="loading" data-value="24" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 18.75%;">
      <div data-state="loading" data-value="24" data-max="128" data-slot="indicator" class="size-full bg-inverted"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="8" aria-label="Apps" role="progressbar" data-state="loading" data-value="8" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 6.25%;">
      <div data-state="loading" data-value="8" data-max="128" data-slot="indicator" class="size-full bg-error"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="12" aria-label="Documents" role="progressbar" data-state="loading" data-value="12" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 9.375%;">
      <div data-state="loading" data-value="12" data-max="128" data-slot="indicator" class="size-full bg-warning"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="42" aria-label="Multimedia" role="progressbar" data-state="loading" data-value="42" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 32.8125%;">
      <div data-state="loading" data-value="42" data-max="128" data-slot="indicator" class="size-full bg-success"></div>
    </div>
  </div>
  <ul data-slot="list" class="flex flex-col gap-1 text-sm">
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="itemLeadingIcon" class="shrink-0 text-inverted size-4"></svg><span data-slot="itemLabel" class="truncate">System</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">19% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="itemLeadingIcon" class="shrink-0 text-error size-4"></svg><span data-slot="itemLabel" class="truncate">Apps</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">6% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><span data-slot="itemLeadingDot" class="shrink-0 rounded-full bg-warning size-2"></span><span data-slot="itemLabel" class="truncate">Documents</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">9% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><span data-slot="itemLeadingDot" class="shrink-0 rounded-full bg-success size-2"></span><span data-slot="itemLabel" class="truncate">Multimedia</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">33% </span></li>
  </ul>
</div>"
`;

exports[`ProgressGroup > renders with status slot correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="gap-2 w-full flex flex-col">
  <div data-slot="status" class="flex text-dimmed duration-200 ease-out motion-reduce:transition-none text-sm flex-row items-center justify-end min-w-fit transition-[width]" style="width: 67%;">Status slot</div>
  <div data-slot="base" class="relative flex overflow-hidden rounded-full bg-accented w-full flex-row h-2">
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="24" aria-label="System" role="progressbar" data-state="loading" data-value="24" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 18.75%;">
      <div data-state="loading" data-value="24" data-max="128" data-slot="indicator" class="size-full bg-inverted"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="8" aria-label="Apps" role="progressbar" data-state="loading" data-value="8" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 6.25%;">
      <div data-state="loading" data-value="8" data-max="128" data-slot="indicator" class="size-full bg-error"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="12" aria-label="Documents" role="progressbar" data-state="loading" data-value="12" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 9.375%;">
      <div data-state="loading" data-value="12" data-max="128" data-slot="indicator" class="size-full bg-warning"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="42" aria-label="Multimedia" role="progressbar" data-state="loading" data-value="42" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 32.8125%;">
      <div data-state="loading" data-value="42" data-max="128" data-slot="indicator" class="size-full bg-success"></div>
    </div>
  </div>
  <ul data-slot="list" class="flex flex-col gap-1 text-sm">
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="itemLeadingIcon" class="shrink-0 text-inverted size-4"></svg><span data-slot="itemLabel" class="truncate">System</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">19% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="itemLeadingIcon" class="shrink-0 text-error size-4"></svg><span data-slot="itemLabel" class="truncate">Apps</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">6% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><span data-slot="itemLeadingDot" class="shrink-0 rounded-full bg-warning size-2"></span><span data-slot="itemLabel" class="truncate">Documents</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">9% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><span data-slot="itemLeadingDot" class="shrink-0 rounded-full bg-success size-2"></span><span data-slot="itemLabel" class="truncate">Multimedia</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">33% </span></li>
  </ul>
</div>"
`;

exports[`ProgressGroup > renders with ui correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="gap-2 w-full flex flex-col">
  <!--v-if-->
  <div data-slot="base" class="relative flex overflow-hidden rounded-full w-full flex-row h-2 bg-default">
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="24" aria-label="System" role="progressbar" data-state="loading" data-value="24" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 18.75%;">
      <div data-state="loading" data-value="24" data-max="128" data-slot="indicator" class="size-full bg-inverted"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="8" aria-label="Apps" role="progressbar" data-state="loading" data-value="8" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 6.25%;">
      <div data-state="loading" data-value="8" data-max="128" data-slot="indicator" class="size-full bg-error"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="12" aria-label="Documents" role="progressbar" data-state="loading" data-value="12" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 9.375%;">
      <div data-state="loading" data-value="12" data-max="128" data-slot="indicator" class="size-full bg-warning"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="42" aria-label="Multimedia" role="progressbar" data-state="loading" data-value="42" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 32.8125%;">
      <div data-state="loading" data-value="42" data-max="128" data-slot="indicator" class="size-full bg-success"></div>
    </div>
  </div>
  <ul data-slot="list" class="flex flex-col gap-1 text-sm">
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="itemLeadingIcon" class="shrink-0 text-inverted size-4"></svg><span data-slot="itemLabel" class="truncate">System</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">19% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="itemLeadingIcon" class="shrink-0 text-error size-4"></svg><span data-slot="itemLabel" class="truncate">Apps</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">6% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><span data-slot="itemLeadingDot" class="shrink-0 rounded-full bg-warning size-2"></span><span data-slot="itemLabel" class="truncate">Documents</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">9% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><span data-slot="itemLeadingDot" class="shrink-0 rounded-full bg-success size-2"></span><span data-slot="itemLabel" class="truncate">Multimedia</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">33% </span></li>
  </ul>
</div>"
`;

exports[`ProgressGroup > renders with value out of bounds correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="gap-2 w-full flex flex-col">
  <!--v-if-->
  <div data-slot="base" class="relative flex overflow-hidden rounded-full bg-accented w-full flex-row h-2">
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="0" aria-label="System" role="progressbar" data-state="loading" data-value="0" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 0%;">
      <div data-state="loading" data-value="0" data-max="128" data-slot="indicator" class="size-full bg-primary"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="128" aria-label="Apps" role="progressbar" data-state="complete" data-value="128" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 100%;">
      <div data-state="complete" data-value="128" data-max="128" data-slot="indicator" class="size-full bg-primary"></div>
    </div>
  </div>
  <ul data-slot="list" class="flex flex-col gap-1 text-sm">
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><span data-slot="itemLeadingDot" class="shrink-0 rounded-full bg-primary size-2"></span><span data-slot="itemLabel" class="truncate">System</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">0% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><span data-slot="itemLeadingDot" class="shrink-0 rounded-full bg-primary size-2"></span><span data-slot="itemLabel" class="truncate">Apps</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">100% </span></li>
  </ul>
</div>"
`;

exports[`ProgressGroup > renders with values above max correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="gap-2 w-full flex flex-col">
  <div data-slot="status" class="flex text-dimmed duration-200 ease-out motion-reduce:transition-none text-sm flex-row items-center justify-end min-w-fit transition-[width]" style="width: 100%;">100% </div>
  <div data-slot="base" class="relative flex overflow-hidden rounded-full bg-accented w-full flex-row h-2">
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="96" aria-label="System" role="progressbar" data-state="loading" data-value="96" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 75%;">
      <div data-state="loading" data-value="96" data-max="128" data-slot="indicator" class="size-full bg-primary"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="64" aria-label="Apps" role="progressbar" data-state="loading" data-value="64" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 50%;">
      <div data-state="loading" data-value="64" data-max="128" data-slot="indicator" class="size-full bg-primary"></div>
    </div>
  </div>
  <ul data-slot="list" class="flex flex-col gap-1 text-sm">
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><span data-slot="itemLeadingDot" class="shrink-0 rounded-full bg-primary size-2"></span><span data-slot="itemLabel" class="truncate">System</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">75% </span></li>
    <li data-slot="item" class="flex items-center gap-1.5 min-w-0"><span data-slot="itemLeadingDot" class="shrink-0 rounded-full bg-primary size-2"></span><span data-slot="itemLabel" class="truncate">Apps</span><span data-slot="itemTrailing" class="ms-auto shrink-0 text-dimmed">50% </span></li>
  </ul>
</div>"
`;

exports[`ProgressGroup > renders without items correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="gap-2 w-full flex flex-col">
  <!--v-if-->
  <div data-slot="base" class="relative flex overflow-hidden rounded-full bg-accented w-full flex-row h-2"></div>
  <!--v-if-->
</div>"
`;

exports[`ProgressGroup > renders without labels correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="gap-2 w-full flex flex-col">
  <!--v-if-->
  <div data-slot="base" class="relative flex overflow-hidden rounded-full bg-accented w-full flex-row h-2">
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="24" aria-label="19%" role="progressbar" data-state="loading" data-value="24" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 18.75%;">
      <div data-state="loading" data-value="24" data-max="128" data-slot="indicator" class="size-full bg-primary"></div>
    </div>
    <div aria-valuemax="128" aria-valuemin="0" aria-valuenow="8" aria-label="6%" role="progressbar" data-state="loading" data-value="8" data-max="128" data-slot="segment" class="duration-200 ease-out motion-reduce:transition-none h-full transition-[width]" style="width: 6.25%;">
      <div data-state="loading" data-value="8" data-max="128" data-slot="indicator" class="size-full bg-primary"></div>
    </div>
  </div>
  <!--v-if-->
</div>"
`;
